--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -48,7 +48,8 @@
     .product-head-img{
         height: 600px;
         border-radius: 0 0 14px 14px;
-        background: url('img/process/img-2.png')
+        background: url('img/process/img-2.png');
+        background-size:cover;
     }
     .button-detail-content{
         width: 100%;
