--- a/scss/style.scss
+++ b/scss/style.scss
@@ -566,6 +566,7 @@ textarea:focus {
     width: 100%;
     height: 650px;
     background: url('img/home/header-homepage.png') no-repeat;
+    background-size: cover;
     .top-header-area {
         width: 100%;
         height: 50px;
@@ -779,6 +780,7 @@ textarea:focus {
     padding: 30px 0 0;
     &.have-logo-bg{
         background: $bg-default url('img/home/logo.png') center no-repeat;
+        background-size:cover;
 
     }
     .detail-blog{
