--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -52,17 +52,52 @@
         margin: 0 auto;
     }
     .img-blog{
+
         &-1{
             background: url('img/contact/contact1.png') center no-repeat;
             background-size: 100%;
+            .text-blog{
+                position: absolute;
+                width: 70%;
+                background: #fff;
+                color: #000;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 10px;
+                left: 50%;
+                transform: translate(-50%,0);
+            }
         }
         &-2{
             background: url('img/contact/contact2.png') center no-repeat;
             background-size: 100%;
+            .text-blog{
+                position: absolute;
+                width: 70%;
+                background: #fff;
+                color: #000;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 10px;
+                left: 50%;
+                transform: translate(-50%,0);
+            }
         }
         &-3{
             background: url('img/contact/contact3.png') center no-repeat;
             background-size: 100%;
+            .text-blog{
+                position: absolute;
+                width: 70%;
+                background: #fff;
+                color: #000;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 10px;
+                left: 50%;
+                transform: translate(-50%,0);
+                // left: 0;
+            }
         }
     }
 }
