--- a/scss/_out-story.scss
+++ b/scss/_out-story.scss
@@ -54,8 +54,10 @@
 }
 .out-story-img-bg{
     height: 600px;
-    background: url('img/out-story/img-2.png');
+    background: url('img/out-story/img-2.png') no-repeat;
     margin-top: 228px;
+    background-size: cover;
+
     @media #{$breakpoint-xs} {
         height: 160px;
         margin-top: 0;
