--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,13 @@ body {
     font-family: $custom-fonts;
     font-size: 18px;
     background: $bg-default;
+    &.have-bg{
+        background: url('img/home/header-homepage.png');
+        background: url(img/home/header-homepage.png) no-repeat;
+        background-size: cover;
+        height: 100vh;
+        position: relative;
+    }
 }
 
 h1,
@@ -102,6 +109,9 @@ img {
 }
 
 /* Spacing */
+.mt-0{
+    margin-top: 0 !important;
+}
 .mt-400{
     margin-top: 400px !important;
 }
@@ -143,9 +153,16 @@ img {
 .mt-400 {
     margin-top: 400px !important;
 }
+.mt-450{
+    margin-top: 450px !important;
+
+}
 
 .mb-15 {
     margin-bottom: 15px !important;
+}
+.mb-23{
+    margin-bottom: 23px !important;
 }
 
 .mb-30 {
@@ -221,9 +238,21 @@ img {
 .padt-500{
     padding-top: 500px !important;
 }
+.padb-40{
+    padding-bottom: 40px !important;
+}
+.padb-60{
+    padding-bottom: 60px !important;
+}
+.more-full-pad{
+    padding-top: calc(100vh);
+}
 
 
 /* Width */
+.width-30{
+    width: 30% !important;
+}
 .width-50{
     width: 50% !important;
 }
@@ -273,7 +302,18 @@ img {
 .height-800 {
     height: 800px !important;
 }
-
+.height-90 {
+    height: 90vh !important;
+}
+.full-height {
+    height: 100vh !important;
+}
+.more-full-height-300 {
+    height: calc(100vh + 300px);
+}
+.more-full-height-200 {
+    height: calc(100vh + 200px);
+}
 /* center */
 .centet-content{
     margin: 0 auto;
@@ -551,13 +591,90 @@ textarea:focus {
             }
         }
     }
+    &.btn-5 {
+        background-color: transparent;
+        border: 3px solid $white-color;
+        line-height: 53px;
+        color: $white-color;
+        @media #{$breakpoint-xs} {
+            height: 40px;
+            line-height: 33px;
+        }
+        &.active,
+        &:hover,
+        &:focus {
+            line-height: 53px;
+            color: $white-color;
+            background-color: rgba(255,255,255,0.5);
+            @media #{$breakpoint-xs} {
+                height: 40px;
+                line-height: 33px;
+            }
+        }
+    }
     @media #{$breakpoint-xs} {
         height: 40px;
         line-height: 39px;
     }
 }
+.main-btn{
+    display: inline-block;
+    width: 50%;
+    height: 48px;
+    color: $white-color;
+    border: none;
+    border-left: 3px solid $border-color;
+    border-radius: 0;
+    padding: 0 30px;
+    font-size: 16px;
+    line-height: 58px;
+    font-weight: 600;
+    &.btn-5 {
+        background-color: transparent;
+        border: 2px solid $white-color;
+        line-height: 38px;
+        color: $white-color;
+        @media #{$breakpoint-xs} {
+            height: 40px;
+            line-height: 33px;
+        }
+        &.active,
+        &:hover,
+        &:focus {
+            line-height: 48px;
+            color: $white-color;
+            background-color: rgba(255,255,255,0.5);
+            line-height: 38px;
+            @media #{$breakpoint-xs} {
+                height: 40px;
+                line-height: 33px;
+            }
+        }
+    }
+}
 
-
+.main-home-detail{
+    width: 50%;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    h4{
+        color: $white-color;
+        margin-top: 40px;
+    }
+    p{
+        margin-top: 40px;
+        color: $white-color;
+    }
+    .detail-butoon{
+        display: flex;
+        .main-btn{
+            margin: 90px 20px 0;
+        }
+    }
+}
 /* :: 5.0 Header Area CSS */
 
 .header-area {
@@ -1776,6 +1893,11 @@ textarea:focus {
     @media #{$breakpoint-xs} {
        width: 100% !important;
     }
+}
+.mb-padt-40{
+    @media #{$breakpoint-xs} {
+        padding-top: 40px !important;
+      }
 }
 .mb-padt-50{
     @media #{$breakpoint-xs} {
