--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@
 
 .out-story-img-bg {
   height: 600px;
-  background: url("img/out-story/img-2.png");
-  margin-top: 228px; }
+  background: url("img/out-story/img-2.png") no-repeat;
+  margin-top: 228px;
+  background-size: cover; }
   @media only screen and (max-width: 767px) {
     .out-story-img-bg {
       height: 160px;
@@ -301,8 +302,18 @@
   transform: translate(-50%);
   border-radius: 14px;
   height: 600px;
-  background: url("img/product-detail/img-1.png") center no-repeat;
   background-size: cover; }
+  .product-detail-area.chathai {
+    background: url("img/product-detail/img-1.png") center no-repeat; }
+  .product-detail-area.malai {
+    background: url("img/product-detail/banner-malai.jpg") 50% 87% no-repeat;
+    background-size: 100%; }
+  .product-detail-area.malai-big {
+    background: url("img/product-detail/banner-malai-big.jpg") 50% 40% no-repeat;
+    background-size: 100%; }
+  .product-detail-area.coconut {
+    background: url("img/product-detail/banner-coconut.jpg") center no-repeat;
+    background-size: 100%; }
   @media only screen and (max-width: 767px) {
     .product-detail-area {
       height: 205px;
@@ -429,12 +440,42 @@
   .contact-area .img-blog-1 {
     background: url("img/contact/contact1.png") center no-repeat;
     background-size: 100%; }
+    .contact-area .img-blog-1 .text-blog {
+      position: absolute;
+      width: 70%;
+      background: #fff;
+      color: #000;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 10px;
+      left: 50%;
+      transform: translate(-50%, 0); }
   .contact-area .img-blog-2 {
     background: url("img/contact/contact2.png") center no-repeat;
     background-size: 100%; }
+    .contact-area .img-blog-2 .text-blog {
+      position: absolute;
+      width: 70%;
+      background: #fff;
+      color: #000;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 10px;
+      left: 50%;
+      transform: translate(-50%, 0); }
   .contact-area .img-blog-3 {
     background: url("img/contact/contact3.png") center no-repeat;
     background-size: 100%; }
+    .contact-area .img-blog-3 .text-blog {
+      position: absolute;
+      width: 70%;
+      background: #fff;
+      color: #000;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 10px;
+      left: 50%;
+      transform: translate(-50%, 0); }
 
 .contact-area-content {
   position: relative; }
@@ -691,6 +732,12 @@ body {
   font-family: "CrimsonText";
   font-size: 18px;
   background: #FFF7EC; }
+  body.have-bg {
+    background: url("img/home/header-homepage.png");
+    background: url(img/home/header-homepage.png) no-repeat;
+    background-size: cover;
+    height: 100vh;
+    position: relative; }
 
 h1,
 h2,
@@ -726,6 +773,9 @@ img {
   max-width: 100%; }
 
 /* Spacing */
+.mt-0 {
+  margin-top: 0 !important; }
+
 .mt-400 {
   margin-top: 400px !important; }
 
@@ -762,8 +812,14 @@ img {
 .mt-400 {
   margin-top: 400px !important; }
 
+.mt-450 {
+  margin-top: 450px !important; }
+
 .mb-15 {
   margin-bottom: 15px !important; }
+
+.mb-23 {
+  margin-bottom: 23px !important; }
 
 .mb-30 {
   margin-bottom: 30px !important; }
@@ -827,7 +883,19 @@ img {
 .padt-500 {
   padding-top: 500px !important; }
 
+.padb-40 {
+  padding-bottom: 40px !important; }
+
+.padb-60 {
+  padding-bottom: 60px !important; }
+
+.more-full-pad {
+  padding-top: calc(100vh); }
+
 /* Width */
+.width-30 {
+  width: 30% !important; }
+
 .width-50 {
   width: 50% !important; }
 
@@ -867,6 +935,18 @@ img {
 
 .height-800 {
   height: 800px !important; }
+
+.height-90 {
+  height: 90vh !important; }
+
+.full-height {
+  height: 100vh !important; }
+
+.more-full-height-300 {
+  height: calc(100vh + 300px); }
+
+.more-full-height-200 {
+  height: calc(100vh + 200px); }
 
 /* center */
 .centet-content {
@@ -1101,10 +1181,76 @@ textarea:focus {
         .delicious-btn.btn-4.active, .delicious-btn.btn-4:hover, .delicious-btn.btn-4:focus {
           height: 40px;
           line-height: 33px; } }
+  .delicious-btn.btn-5 {
+    background-color: transparent;
+    border: 3px solid #ffffff;
+    line-height: 53px;
+    color: #ffffff; }
+    @media only screen and (max-width: 767px) {
+      .delicious-btn.btn-5 {
+        height: 40px;
+        line-height: 33px; } }
+    .delicious-btn.btn-5.active, .delicious-btn.btn-5:hover, .delicious-btn.btn-5:focus {
+      line-height: 53px;
+      color: #ffffff;
+      background-color: rgba(255, 255, 255, 0.5); }
+      @media only screen and (max-width: 767px) {
+        .delicious-btn.btn-5.active, .delicious-btn.btn-5:hover, .delicious-btn.btn-5:focus {
+          height: 40px;
+          line-height: 33px; } }
   @media only screen and (max-width: 767px) {
     .delicious-btn {
       height: 40px;
       line-height: 39px; } }
+
+.main-btn {
+  display: inline-block;
+  width: 50%;
+  height: 48px;
+  color: #ffffff;
+  border: none;
+  border-left: 3px solid #1c8314;
+  border-radius: 0;
+  padding: 0 30px;
+  font-size: 16px;
+  line-height: 58px;
+  font-weight: 600; }
+  .main-btn.btn-5 {
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    line-height: 38px;
+    color: #ffffff; }
+    @media only screen and (max-width: 767px) {
+      .main-btn.btn-5 {
+        height: 40px;
+        line-height: 33px; } }
+    .main-btn.btn-5.active, .main-btn.btn-5:hover, .main-btn.btn-5:focus {
+      line-height: 48px;
+      color: #ffffff;
+      background-color: rgba(255, 255, 255, 0.5);
+      line-height: 38px; }
+      @media only screen and (max-width: 767px) {
+        .main-btn.btn-5.active, .main-btn.btn-5:hover, .main-btn.btn-5:focus {
+          height: 40px;
+          line-height: 33px; } }
+
+.main-home-detail {
+  width: 50%;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  .main-home-detail h4 {
+    color: #ffffff;
+    margin-top: 40px; }
+  .main-home-detail p {
+    margin-top: 40px;
+    color: #ffffff; }
+  .main-home-detail .detail-butoon {
+    display: flex; }
+    .main-home-detail .detail-butoon .main-btn {
+      margin: 90px 20px 0; }
 
 /* :: 5.0 Header Area CSS */
 .header-area {
@@ -2085,6 +2231,10 @@ textarea:focus {
 @media only screen and (max-width: 767px) {
   .mb-full-width {
     width: 100% !important; } }
+
+@media only screen and (max-width: 767px) {
+  .mb-padt-40 {
+    padding-top: 40px !important; } }
 
 @media only screen and (max-width: 767px) {
   .mb-padt-50 {
