--- a/style.css
+++ b/style.css
@@ -1113,7 +1113,7 @@ textarea:focus {
   border-radius: 0;
   bottom: 60px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
-  color: #ffffff;
+  color: #141414;
   font-size: 24px;
   height: 40px;
   line-height: 38px;
