--- a/scss/style.scss
+++ b/scss/style.scss
@@ -507,7 +507,7 @@ textarea:focus {
     border-radius: 0;
     bottom: 60px;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
-    color: $white-color;
+    color: $dark-color;
     font-size: 24px;
     height: 40px;
     line-height: 38px;
