--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,4 +1,4 @@
 // Fonts
 $fonts: 'Open Sans', sans-serif;
-$custom-fonts:'CrimsonText';
+$custom-fonts:'Crimson Text', serif;;
 // $eng-fonts:'poppins', Fallback, sans-serif;
