--- a/scss/_process.scss
+++ b/scss/_process.scss
@@ -26,6 +26,7 @@
         font-size: 100px;
         font-weight: normal;
         margin-bottom: 30px;
+        font-style: italic;
         @media #{$breakpoint-xs} {
             font-size: 60px;
         }
@@ -35,6 +36,7 @@
         font-size: 36px; 
         font-weight: normal;
         margin-bottom: 30px;
+        font-style: italic;
     }
     h4{
         font-size: 24px;
