--- a/scss/_product-detail.scss
+++ b/scss/_product-detail.scss
@@ -69,6 +69,7 @@
         left: 50%;
         transform: translate(-50%,-50%);
         h1{
+            font-style: italic;
             color: $white-color;
         }
     }
@@ -99,31 +100,86 @@
         }
         // filter: blur(25px);
     }
-    .img-blog{
-       
-        &-1{
-            border-radius: 15px;
-            border: 3px solid #e3e3e3;
-            height: 170px;
-            background: $white-color url('img/product-detail/img-3.png') center no-repeat;
-            background-size:cover;
-        }
-        &-2{
-            border-radius: 15px;
-            border: 3px solid #e3e3e3;
-            height: 170px;
-            background: $white-color url('img/product-detail/img-4.png') center no-repeat;
-            background-size:cover;
-        }
-        &-3{
-            border-radius: 15px;
-            border: 3px solid #e3e3e3;
-            height: 170px;
-            background: $white-color url('img/product-detail/img-5.png') center no-repeat;
-            background-size:cover;
-        }
-      
+    .coco-main-img{
+        width: 40%;
     }
+    
+        .coco{
+       
+            &-1{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/coconut/coco-3.png) 50% 70% no-repeat;
+                background-size: 90%;
+            
+            }
+            &-2{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url('img/product-detail/coconut/coco-4.png') center no-repeat;
+                background-size:cover;
+            }
+            &-3{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url('img/product-detail/coconut/coco-5.png') center no-repeat;
+                background-size:cover;
+            }
+          
+        }
+        .cha-thai{
+            &-1{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/img-3.png) 50% 70% no-repeat;
+                background-size: 90%;
+            
+            }
+            &-2{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/img-4.png) 50% 65% no-repeat;
+                background-size: cover;
+            }
+            &-3{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/img-5.png) 50% 58% no-repeat;
+                background-size: cover;
+            }
+        }
+        .lamai{
+            &-1{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/big-malai/lamai-3.png) 50% 37% no-repeat;
+                background-size: 90%;
+            
+            }
+            &-2{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/big-malai/lamai-5.png) 50% 80% no-repeat;;
+                background-size: cover;
+            }
+            &-3{
+                border-radius: 15px;
+                border: 3px solid #e3e3e3;
+                height: 170px;
+                background: $white-color url(img/product-detail/big-malai/lamai-4.png) 50% 75% no-repeat;
+                background-size: cover;
+            }
+        }
+    
+   
     .detail-title-blog{
         h4,p{
             color: $white-color
