--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,17 +20,17 @@
 */
 
 /* :: 1.0 Import Fonts */
-@font-face {
-    font-family: 'CrimsonText';
-    src: url('../lamai/fonts/(CrimsonText-Regular)CrimsonText-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
+// @font-face {
+//     font-family: 'CrimsonText';
+//     src: url('../lamai/fonts/(CrimsonText-Regular)CrimsonText-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
    
-  }
+//   }
 //   @font-face {
 //     font-family: 'poppins';
 //     src: url('../GroCo/fonts/Poppins/poppins-Light.ttf') format('truetype'); /* Safari, Android, iOS */
 //   }
 
-// @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i');
 
 /* :: 2.0 Import All CSS */
 
@@ -237,6 +237,11 @@ img {
 }
 .padt-500{
     padding-top: 500px !important;
+}
+.lg-padt-600{
+    @media only screen and (min-width:1600px) {
+       padding-top: 600px !important; 
+    }
 }
 .padb-40{
     padding-bottom: 40px !important;
@@ -767,6 +772,7 @@ textarea:focus {
                             font-size: 18px;
                             display: block;
                             padding: 10px 20px;
+                            font-style: italic;
                         }
                     }
                 }
@@ -875,7 +881,8 @@ textarea:focus {
             color: $white-color;
             line-height: 1.5;
             margin-bottom: 0;
-            font-weight: bold;
+            font-style: italic;
+            // font-weight: bold;
         }
         .icon-in-text{
             margin: 30px 0;
@@ -897,7 +904,7 @@ textarea:focus {
     padding: 30px 0 0;
     &.have-logo-bg{
         background: $bg-default url('img/home/logo.png') center no-repeat;
-        background-size:cover;
+        background-size:contain;
 
     }
     .detail-blog{
@@ -910,9 +917,11 @@ textarea:focus {
                 text-align: right;
             }
             h1{
-                font-size: 72px;
+                font-size: 60px;
+                font-weight: normal;
+                font-style: italic;
                 @media #{$breakpoint-xs} {
-                    font-size: 60px;
+                    font-size: 50px;
                  }
             }
             h3{
@@ -963,7 +972,8 @@ textarea:focus {
             //    }
                .read-more{
                    font-size: 24px;
-                   font-weight: bold;
+                   font-weight: normal;
+                   font-style: italic;
                    color: $text-color;
                    text-decoration: underline;
                    padding: 5px 0;
@@ -1528,6 +1538,7 @@ textarea:focus {
             li{
                 margin: 0 30px;
                 a{
+                    font-style: italic;
                     font-size: 20px;
                 }
 
@@ -1539,6 +1550,7 @@ textarea:focus {
         background: $text-color;
         padding: 10px 0;
         p{
+            font-style: italic;
             font-size: 18px;
             color: $white-color;
         }
